tests/should_fail/bug/459.stderr
error: Mutually recursive functions: when calling `<A as creusot_std::model::DeepModel>::deep_model`...
  --> 459.rs:12:5
   |
12 |     fn deep_model(self) -> Self::DeepModelTy {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: then `<A as creusot_std::model::DeepModel>::deep_model` uses the impl `<A as creusot_std::model::DeepModel>` via the call to `creusot_std::std::boxed::<impl creusot_std::model::DeepModel for std::boxed::Box<T, A>>::deep_model`...
  --> 459.rs:14:28
   |
14 |             A::Cons(a) => *a.deep_model() + 1,
   |                            ^^^^^^^^^^^^^^
note: finally the method `<A as creusot_std::model::DeepModel>::deep_model` might be called
  --> 459.rs:12:5
   |
12 |     fn deep_model(self) -> Self::DeepModelTy {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

